# docling-rs

./: .gitignore  sitemap.xml
.github/workflows/: rust-ci.yml  rust-release.yml
docling-rs/: Cargo.toml
docling-rs/src/: cli.rs  converter.rs  lib.rs  main.rs  ocr.rs
docling-rs/src/backend/: asciidoc.rs  csv.rs  docx.rs  html.rs  jats.rs  json_docling.rs  latex.rs  markdown.rs  mod.rs  pdf.rs  pptx.rs  uspto.rs  webvtt.rs  xbrl.rs  xlsx.rs
docling-rs/src/export/: csv.rs  html.rs  markdown.rs  text.rs
docling-rs/src/models/: common.rs  document.rs
e2e/src/: helpers.rs  pdf_fixtures.rs
e2e/tests/: cli.rs  image.rs  latex.rs  pdf.rs  xbrl.rs  xml_formats.rs
examples/asr_pipeline_performance_comparison/: index.html
examples/batch_convert/: index.html
examples/chart_extraction/: index.html
examples/code_formula_granite_docling/: index.html
examples/compare_vlm_models/: index.html
examples/custom_convert/: index.html
examples/demo_layout_vlm/: index.html
examples/develop_formula_understanding/: index.html
examples/develop_picture_enrichment/: index.html
examples/enrich_doclingdocument/: index.html
examples/enrich_simple_pipeline/: index.html
examples/export_figures/: index.html
examples/export_multimodal/: index.html
examples/export_tables/: index.html
examples/full_page_ocr/: index.html
examples/gpu_standard_pipeline/: index.html
examples/gpu_vlm_pipeline/: index.html
examples/granitedocling_repetition_stopping/: index.html
examples/inspect_picture_content/: index.html
search/: search_index.json
(+56 files in other folders)
