[package]
name = "docling-rs"
version = "0.4.2"
edition = "2021"

[[bin]]
name = "docling-rs"
path = "src/main.rs"

[lib]
name = "docling"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
comrak = "0.36"
csv = "1"
log = "0.4"
env_logger = "0.11"
regex = "1"
scraper = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
thiserror = "2"
ego-tree = "0.10"
zip = "8.2.0"
calamine = { version = "0.33.0", features = ["dates"] }
chrono = "0.4"
quick-xml = "0.39.2"
roxmltree = "0.21.1"
lopdf = "0.39.0"
pdf_oxide = { version = "=0.3.15", default-features = false, optional = true }
pdfium-render = { version = "0.8", optional = true }
pdfium-auto = { version = "0.1", optional = true }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp", "tiff", "webp"] }
base64 = "0.22"

[features]
default = ["pdf-oxide", "pdfium-render"]
pdf-oxide = ["dep:pdf_oxide"]
pdfium-render = ["dep:pdfium-render", "dep:pdfium-auto"]

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
